Mockito, Easy-random, AssertJ